test/regress/cov6-amount-parse-too-many-commas.test
; Test parse error for too many commas in amount (decimal-comma style)
; Covers amount.cc line 1219 (no_more_commas error)

commodity 1.000,00 EUR

2024/01/01 Test
    Expenses:Food    1.234,56,78 EUR
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 7:
While parsing posting:
  Expenses:Food    1.234,56,78 EUR
                   ^^^^^^^^^^^^^^^
Error: Too many commas in amount
end test
